samples/_failures_safe/1761403768_850bf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9481ead3.c: In function ‘main’:
./samples/SAFE/__tmp_9481ead3.c:168:13: error: expected ‘;’ at end of input
  168 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_9481ead3.c:168:5: error: expected declaration or statement at end of input
  168 |     return 0
      |     ^~~~~~
